Fix content overflow

--- a/src/style/Markdown.css
+++ b/src/style/Markdown.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     flex: 1 1 auto;
+    overflow-y: scroll;
 }
 
 /*нужен, иначе стирается flex эффект*/
