--- a/src/style/PageWindow.css
+++ b/src/style/PageWindow.css
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: column;
     flex: 1 1 auto;
+    overflow: auto;
 }
 
 .page-window-title {
